2003-04-13  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/skunkweb.py.in, SkunkWeb/SkunkWeb/Server.py,
	SkunkWeb/SkunkWeb/bootloader.py.in,
	pylibs/ProcessMgr/ProcessMgr.py: modified patch by Frank Tegtmeyer
	to get the server to run without daemonizing, for monitoring with
	djb's daemontools.

2003-04-11  Jacob Smullyan  <smulloni@smullyan.org>

	* docs/stmlrefer/stmlrefer.tex (section{The \texttt{CONNECTION}
	Object}): typo fix, thanks to Frank Tegtmeyer.

	* pylibs/formlib/__init__.py: conditional import of aecomp
	submodule (will still work if AE isn't installed).

	* pylibs/formlib/aecomp.py: viewable fields/form that delegate
	to AE components for presentation.

2003-04-07  Jacob Smullyan  <smulloni@smullyan.org>

	* docs/stmlrefer/stmlrefer.tex (section{\texttt{<:for:>}}): Added
	documentation for using tuples in the <:for:> tag's "name"
	parameter (and learned how to type a literal quotation mark in
	latex-mode!) 

	* pylibs/DT/DTTags.py (ImportTag.genCode): Permit items being
	imported to be separated by commas as well as spaces: 
	<:import os "getlogin, getuid":> now works.

2003-04-04  Jacob Smullyan  <smulloni@smullyan.org>

	* Makefile.in, pylibs/Makefile.in, SkunkWeb/Makefile.in,
	SkunkWeb/Services/Makefile.in: added DESTDIR in the numerous
	places it wasn't being used in make install targets (to facilitate
	making rpms, ebuilds).

2003-04-03  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/sw.conf.in: added comments about usertracking.

	* README: moved stuff about pickling errors to FAQ.

	* HACKING: added some package descriptions.

	* FAQ: reconciled conflicts, added an entry and did some editing.

2003-04-03    <drew@loki.sai-office>

	* pylibs/AE/Cache.py: added runOutOfCache and dontCacheSource
	options

	* docs/opman/opman.tex: added doc for runOutOfCache and 
	dontCacheSource

	* ACKS: added Hy Ginsberg

2003-04-02  Jacob Smullyan  <smulloni@smullbola.smullyan.org>

	* pylibs/PostgreSql/__init__.py (SimpleQueryTest): added